# app/Http/Controllers/Controller.php
@@ -3,9 +3,23 @@
 namespace App\Http\Controllers;
 
 use Laravel\Lumen\Routing\Controller as BaseController;
+
 /**
- * @OA\Info(title="My Anime List", version="0.1")
+ * @OA\Info(
+ *     title="API",
+ *     version="0.1",
+ *     description="API para consulta de animes",
+ *     @OA\Contact(
+ *         name="Arthur",
+ *         email="arthurbrasa@outlook.com"
+ *     ),
+ *     @OA\License(
+ *         name="MIT",
+ *         url="https://opensource.org/licenses/MIT"
+ *     )
+ * )
  */
+
 class Controller extends BaseController
 {
     //
